--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/Danny/Library/Application Support/NetBeans/8.0/build.properties
+user.properties.file=C:\\Users\\Mehmet\\.netbeans\\7.1.2\\build.properties
